--- a/pyramid_simple_acl/templates/search-room.jinja2
+++ b/pyramid_simple_acl/templates/search-room.jinja2
@@ -10,12 +10,12 @@
 </form>
 <br/>
 {% if content is iterable %}
-<table cellspacing="3" cellpadding="3" border="1">
+<table>
     <tr>
         <td>CustID</td>
         <td>Room</td>
-        <td>Fname</td>
         <td>Lname</td>
+        <td>Fname</td>
         <td>Profile</td>
     </tr>
     
