--- a/pyramid_simple_acl/templates/login.jinja2
+++ b/pyramid_simple_acl/templates/login.jinja2
@@ -1,25 +1,34 @@
 {% extends "layout.jinja2" %}
 
 {% block content %}
-<div class="content">
-<h2><span class="smaller">Login</span></h2>
-<h3>{{ message }}</h3>
-<form method="POST">
-    <table cellspacing="3" cellpadding="3">
-        <tr>
-            <td>user name</td>
-            <td>&nbsp;</td>
-            <td><input type="text" name="user_name" /></td>
-        </tr>
-        <tr>
-            <td>password</td>
-            <td>&nbsp;</td>
-            <td><input type="password" name="password" /></td>
-        </tr>
-        <tr>
-            <td colspan="3"><input type="submit" /></td>
-        </tr>
-    </table>
-</form>
-</div>
+<br />
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h1>Login</h1>
+    </div>
+    <span>{{ message }}</span>
+    <div class="panel-body">
+        <form method="POST">
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-addon">
+                    <i class="glyphicon glyphicon-user" style="width: auto"></i>
+                </span>
+                <input class="form-control" type="text" name="user_name" placeholder="user name" />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-addon">
+                    <i class="glyphicon glyphicon-lock" style="width: auto"></i>
+                </span>
+                <input class="form-control" type="password" name="password" placeholder="password" />
+            </div>
+        </div>
+        <button class="btn btn-default" style="width: 100%">
+            SUBMIT<i class="glyphicon glyphicon-log-in"></i>
+        </button>
+        </form>
+    </div>
+</div>        
 {% endblock content %}
