--- a/pyramid_simple_acl/templates/layout.jinja2
+++ b/pyramid_simple_acl/templates/layout.jinja2
@@ -33,7 +33,7 @@
       <div class="links">
         <ul>
           {% if login %}
-            <li><i class="glyphicon glyphicon-logout icon-muted"></i><a href="logout">Logout</a></li>
+            <li><i class="glyphicon glyphicon-logout icon-muted"></i>Hi, [{{userid}}] - <a href="logout">Logout</a></li>
           {% endif %}
           
           <li><i class="glyphicon glyphicon-home icon-muted"></i><a href="https://pylonsproject.org">Powered by Pyramid - Copyright &copy; Pylons Project</a></li>
